--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vairojarela",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vairojarela.github.io/personal-website",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
@@ -16,6 +17,8 @@
     "reactstrap": "^8.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
