--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
+    "aos": "^2.3.4",
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.1.1",
     "jquery": "^3.4.1",
